# strfmt

./: Cargo.toml  README.md  design.rsk
example/: Cargo.toml
example/src/: lib.rs
src/: fmtf64.rs  fmti64.rs  fmtnum.rs  fmtstr.rs  fmttype.rs  fmtu16.rs  formatter.rs  lib.rs  macros.rs  maptrait.rs  parser.rs  types.rs
src/maptrait/: hashbrown_impl.rs  serde_json_impl.rs
src/tests/: float.rs  fmt.rs  key.rs  legacy.rs  macros.rs  mod.rs  strfmt.rs  test_fmt.rs  test_trait.rs
