[package]
name = "strfmt"
version = "0.3.0"
description = "strfmt: rust library for formatting dynamic strings"
repository = "https://github.com/vitiral/strfmt"
readme = "README.md"
keywords = ["format", "string", "str", "dynamic", "static"]
authors = ["Garrett Berg <vitiral@gmail.com>"]
license = "MIT"

[dependencies]
hashbrown = { version = "0.14.0", features = ["serde"] , optional = true}
serde_json = { version = "1.0.0" , optional = true }
